dataclients/kubernetes/testdata/ingressV1/ingress-data/ing-with-prule-wrong-ep-port.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qux
  namespace: foo
spec:
  rules:
  - host: www.example.org
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: bar
            port:
              name: baz
---
apiVersion: v1
kind: Service
metadata:
  name: qux
  namespace: foo
spec:
  clusterIP: 10.3.190.97
  ports:
  - name: baz
    port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    application: myapp
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    application: myapp
  name: myapp
subsets:
- addresses:
  - ip: 10.2.9.103
  - ip: 10.2.9.104
  ports:
  - name: baz
    port: 8080
    protocol: TCP
